# VividLinux

./: AUTOSTART-GUIDE.md  EASY-START.sh  README-SIMPLE.md  README.md  build.sh  fix-permissions  fix-permissions.sh  install  meson.build  quick-build.sh  quick-test.sh  run  run.sh  test-autostart.sh  test-local.sh  test-vibrance.sh  uninstall  v  vivid
data/: org.vivid.SaturationControl.desktop  org.vivid.SaturationControl.metainfo.xml
flatpak/: org.vivid.SaturationControl.yml
src/: MainWindow.cpp  MainWindow.h  SaturationController.cpp  SaturationController.h  main.cpp
src/cli/: CommandLineInterface.cpp  CommandLineInterface.h
src/core/: AutostartManager.cpp  AutostartManager.h  VibranceController.cpp  VibranceController.h  VividManager.cpp  VividManager.h
src/ui/: MainWindow.cpp  MainWindow.h
